@@ -55,6 +55,7 @@ Bug_3505_Regression_Test
 Bug_3673_Regression_Test
 Bug_3709_Regression_Test: !LabVIEW_RT
 Bug_3710_Regression_Test
+Bug_3729_Regression_Test: !FIXED_BUGS_ONLY
 Bug_3744_Regression_Test: !FIXED_BUGS_ONLY
 CDR_Array_Test: !ACE_FOR_TAO
 CDR_File_Test: !ACE_FOR_TAO
